--- a/Silux/app/templates/index.html
+++ b/Silux/app/templates/index.html
@@ -7,16 +7,23 @@
     <link rel="stylesheet" href="{% static "css/theme.css" %}">
 </head>
 <body>
-    <header>
-        <h1>Blog</h1>
-        <h2>
-            <a href="admin/app/post/add/">Crear nuevo blog</a>
-        </h2>
-    </header>
+<header>
+    <div class="brand">
+        <img src="{% static "img/logo2.png" %}" alt="">
+        <img src="{% static "img/logo3.png" %}" alt="">
+    </div>
+    <h1>Blog</h1>
+    <ul class = "menu">
+        <li><a href="admin/app/post/add/">Crear nuevo blog</a></li>
+    </ul>
+</header>
+<main>
     {% for entrada in object_list %}
         <h2>{{ entrada.title }}</h2>
         <p>{{ entrada.text }}</p>
     {% endfor %}
-    
+</main>
+
+
 </body>
 </html>
