--- a/Silux/userprofiles/templates/signin.html
+++ b/Silux/userprofiles/templates/signin.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
+    <link rel="stylesheet" href="{% static "/css_user/theme.css" %}">
 </head>
 <body>
+<div id="fondo">
+
+</div>
     <main>
         <section>
         <form action="" method="post">
