--- a/Silux/app/templates/index.html
+++ b/Silux/app/templates/index.html
@@ -3,29 +3,45 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hola</title>
+    <title>Silux</title>
     <link rel="stylesheet" href="{% static "css/theme.css" %}">
+
 </head>
 <body>
-<header>
+    <div>
+        <header>
     <div class="brand">
         <img src="{% static "img/logo2.png" %}" alt="">
         <img src="{% static "img/logo3.png" %}" alt="">
     </div>
     <h1>Blog</h1>
-    <ul class = "menu">
-        <li><a href="admin/app/post/add/">Crear nuevo blog</a></li>
-        <li><a href="signup/">Registrarse</a></li>
-        <li><a href="signin/">Iniciar sesion</a></li>
+    <ul class="button">
+        <li>
+            <button class="enlace" role="link" onclick="window.location='admin/app/post/add/'"><b>Crear nuevo blog</b>
+            </button>
+        </li>
+        <li>
+            <button class="enlace" role="link" onclick="window.location='signup/'"><b>Registrarse</b></button>
+        </li>
+        <li>
+            <button class="enlace" role="link" onclick="window.location='signin/'"><b>Iniciar sesion</b></button>
+        </li>
     </ul>
 </header>
 <main>
     {% for entrada in object_list %}
-        <h2>{{ entrada.title }}</h2>
-        <p>{{ entrada.text }}</p>
+        <div class="agrupar">
+            <h2>{{ entrada.title }}</h2>
+            <p>{{ entrada.text }}</p>
+        </div>
+        <br>
     {% endfor %}
 </main>
 
+    </div>
+<footer>
+
+</footer>
 
 </body>
 </html>
