--- a/Silux/userprofiles/templates/signup.html
+++ b/Silux/userprofiles/templates/signup.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Iniciar Sesion</title>
+    <link rel="stylesheet" href="{% static "/css_user/theme.css" %}">
 </head>
 <body>
+<main>
     <section>
         <form action="" method="post">
             {% csrf_token %}
@@ -12,5 +15,7 @@
             <input type="submit" value="Submit">
         </form>
     </section>
+</main>
+
 </body>
 </html>
